--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,55 @@
-<ion-menu [content]="content">
+
+
+<ion-menu side="left" id="authenticated" [content]="content">
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
+    <ion-toolbar class="user-profile">
+
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+              <div class="user-avatar">
+                <img src="../assets/img/avatar.jpg">
+              </div>
+          </ion-col>
+          <ion-col padding-top col-8>
+            <h2 ion-text class="no-margin bold text-white">
+              {{name}}
+            </h2>
+          
+          </ion-col>
+        </ion-row>
+
+        <ion-row no-padding class="other-data">
+          <ion-col no-padding class="column">
+            <button ion-button icon-left small full color="light" menuClose disabled>
+
+              Edit Profile
+            </button>
+          </ion-col>
+          <ion-col no-padding class="column">
+            <button ion-button icon-left small full color="light" menuClose (click)="onLogout()">
+              <ion-icon name="log-out"></ion-icon>
+              Log Out
+            </button>
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
+
     </ion-toolbar>
   </ion-header>
 
-  <ion-content >
-      <ion-list>
-        <button  menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-          {{p.title}}
-        </button>
-      </ion-list>
+  <ion-content color="primary">
+
+
+    <ion-list class="user-list">
+      <button ion-item menuClose class="text-1x" *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon item-left [name]="p.icon" color="primary"></ion-icon>
+        <span ion-text color="primary">{{p.title}}</span>
+      </button>
+    </ion-list>
   </ion-content>
 
 </ion-menu>
 
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
